# AlekSIS-App-CSVImport

./: .gitignore  .gitlab-ci.yml  CHANGELOG.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
aleksis/apps/csv_import/: apps.py  default_templates.py  default_templates.toml  field_types.py  forms.py  menus.py  model_extensions.py  models.py  preferences.py  settings.py  templates.py  views.py
aleksis/apps/csv_import/locale/ar/LC_MESSAGES/: django.po
aleksis/apps/csv_import/locale/de_DE/LC_MESSAGES/: django.po
aleksis/apps/csv_import/locale/fr/LC_MESSAGES/: django.po
aleksis/apps/csv_import/locale/tr_TR/LC_MESSAGES/: django.po
aleksis/apps/csv_import/management/commands/: csv_import.py
aleksis/apps/csv_import/migrations/: 0001_initial.py  0002_separator.py  0003_group.py  0004_group_type.py
aleksis/apps/csv_import/static/csv_import/schild_nrw/: schild_aleksis_lehrer.txt
aleksis/apps/csv_import/templates/csv_import/: csv_import.html
aleksis/apps/csv_import/tests/models/: test_field_type.py  test_template.py
aleksis/apps/csv_import/tests/util/: test_converters.py  test_import_helpers.py  test_pedasos_helpers.py
aleksis/apps/csv_import/util/: converters.py  import_helpers.py  pedasos_helpers.py  process.py
aleksis/apps/schild_nrw/: __init__.py  apps.py  forms.py  menus.py  rules.py  util.py  views.py
aleksis/apps/schild_nrw/locale/ar/LC_MESSAGES/: django.po
aleksis/apps/schild_nrw/locale/de_DE/LC_MESSAGES/: django.po
aleksis/apps/schild_nrw/management/commands/: schild_import.py
aleksis/apps/schild_nrw/static/schild_nrw/: schild_aleksis_eltern.txt  schild_aleksis_schueler.txt  schild_biscuit_schueler.txt
aleksis/apps/schild_nrw/templates/schild_nrw/: schild_import.html
biscuit/apps/schild_nrw/: __init__.py  apps.py  forms.py  menus.py  urls.py  util.py  views.py
biscuit/apps/schild_nrw/locale/ar/LC_MESSAGES/: django.po
biscuit/apps/schild_nrw/locale/de_DE/LC_MESSAGES/: django.po
biscuit/apps/schild_nrw/locale/fr/LC_MESSAGES/: django.po
biscuit/apps/schild_nrw/locale/nb_NO/LC_MESSAGES/: django.po
biscuit/apps/schild_nrw/locale/tr_TR/LC_MESSAGES/: django.po
biscuit/apps/schild_nrw/management/commands/: schild_import.py
biscuit/apps/schild_nrw/static/schild_nrw/: schild_biscuit_eltern.txt  schild_biscuit_lehrer.txt  schild_biscuit_schueler.txt
biscuit/apps/schild_nrw/templates/schild_nrw/: schild_import.html
