[tool.poetry]
name = "AlekSIS-App-CSVImport"
version = "2.0a1"
packages = [
    { include = "aleksis" }
]
readme = "README.rst"

description = "AlekSIS (School Information System) — App for SchILD-NRW interaction"
authors = ["Dominik George <dominik.george@teckids.org>"]
license = "EUPL-1.2"
homepage = "https://aleksis.org/"
repository = "https://edugit.org/AlekSIS/Onboarding/AlekSIS-App-CSVImport"
documentation = "https://aleksis.edugit.io/AlekSIS/docs/html/"
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.7"
AlekSIS = { path = "../../.." }
pandas = "^1.0.0"
phonenumbers = "^8.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
